[gd_scene load_steps=2 format=3 uid="uid://dcytuwxf2jp72"]

[ext_resource type="Script" path="res://scripts/ui/locked_card.gd" id="1_locked_card"]

[node name="LockedCard" type="PanelContainer"]
custom_minimum_size = Vector2(180, 280)
script = ExtResource("1_locked_card")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LockIcon" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ðŸ”’"
horizontal_alignment = 1

[node name="LockedLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "LOCKED"
horizontal_alignment = 1
